add missing alt attributes

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
             heigth="1920"
             media="(orientation: portrait)"
             loading="lazy"
+            alt=""
           />
         </picture>
 
@@ -310,19 +311,19 @@
         <div class="background-images">
           <picture>
             <source srcset="/assets/images/caju-xs.avif 1x, /assets/images/caju-lg.avif 2x" type="image/avif" />
-            <img src="/assets/images/caju-xs.png" class="one" loading="lazy" />
+            <img src="/assets/images/caju-xs.png" class="one" loading="lazy" alt="" />
           </picture>
           <picture>
             <source srcset="/assets/images/caju-xs.avif 1x, /assets/images/caju-lg.avif 2x" type="image/avif" />
-            <img src="/assets/images/caju-xs.png" class="two" loading="lazy" />
+            <img src="/assets/images/caju-xs.png" class="two" loading="lazy" alt="" />
           </picture>
           <picture>
             <source srcset="/assets/images/caju-xs.avif 1x, /assets/images/caju-lg.avif 2x" type="image/avif" />
-            <img src="/assets/images/caju-xs.png" class="three" loading="lazy" />
+            <img src="/assets/images/caju-xs.png" class="three" loading="lazy" alt="" />
           </picture>
           <picture>
             <source srcset="/assets/images/caju-xs.avif 1x, /assets/images/caju-lg.avif 2x" type="image/avif" />
-            <img src="/assets/images/caju-xs.png" class="four" loading="lazy" />
+            <img src="/assets/images/caju-xs.png" class="four" loading="lazy" alt="" />
           </picture>
         </div>
 
@@ -388,7 +389,7 @@
           <a href="tel:+34687017471">+34687017471</a>
           <a href="tel:+34657759110">+34657759110</a>
           <div class="location">
-            <img src="/assets/images/pin.png" height="35" />
+            <img src="/assets/images/pin.png" height="35" loading="lazy" />
 
             <p>From Argentina <br />Based in <strong>Barcelona</strong></p>
           </div>
@@ -397,7 +398,7 @@
               srcset="/assets/images/caju-contact-600w.avif 1x, /assets/images/caju-contact-1000w.avif 2x"
               type="image/avif"
             />
-            <img src="/assets/images/caju-contact-600w.png" class="caju-bg" loading="lazy" />
+            <img src="/assets/images/caju-contact-600w.png" class="caju-bg" loading="lazy" alt="" />
           </picture>
         </div>
 
@@ -406,7 +407,7 @@
           <button onclick='window.scrollTo({top: 0, behavior: "smooth"})' aria-label="Go back to top">
             <picture>
               <source srcset="/assets/images/logo-xs.avif 1x, /assets/images/logo-xs-2x.avif 2x" type="image/avif" />
-              <img srcset="/assets/images/logo-xs.png 1x, /assets/images/logo-xs-2x.png 2x" height="50" />
+              <img srcset="/assets/images/logo-xs.png 1x, /assets/images/logo-xs-2x.png 2x" height="50" alt="" />
             </picture>
           </button>
         </div>
