--- a/index.html
+++ b/index.html
@@ -151,10 +151,31 @@
             </picture>
           </button>
         </div>
-        <video id="bgVideo" class="background-full" autoplay="true" muted playsinline loop alt="background video">
-          <source src=" /assets/videos/background-portrait-lq.mp4" type="video/mp4" media="(orientation: portrait) " />
-          <source src="/assets/videos/background-landscape-hq.mp4" type="video/mp4" media="(orientation: landscape)" />
-        </video>
+        <video
+          id="bgVideo"
+          class="background-full"
+          autoplay="true"
+          muted
+          playsinline
+          loop
+          alt="Background video showcasing the work"
+        ></video>
+        <script>
+          function getScreenOrientation() {
+            return screen.orientation.type.startsWith("portrait") ? "portrait" : "landscape";
+          }
+
+          window.addEventListener("load", () => {
+            // get video by its id
+            const video = document.getElementById("bgVideo");
+            // poster and src url
+            video.src = `/assets/videos/${
+              getScreenOrientation() == "portrait" ? "background-portrait-lq.mp4" : "background-landscape-hq.mp4"
+            }`;
+            // load video
+            video.load();
+          });
+        </script>
         <style>
           section:first-child {
             height: 100svh;
