another alt missing

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
           <a href="tel:+34687017471">+34687017471</a>
           <a href="tel:+34657759110">+34657759110</a>
           <div class="location">
-            <img src="/assets/images/pin.png" height="35" loading="lazy" />
+            <img src="/assets/images/pin.png" height="35" loading="lazy" alt="pin" />
 
             <p>From Argentina <br />Based in <strong>Barcelona</strong></p>
           </div>
