Add Open Graph metadata

--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <title>CAJÚ</title>
     <meta
       name="Description"
-      content="CAJÚ - A cinematic duo comprising of cinematographer 
-    Camila Hayes and musician Julia Groppo.
-    We provide Content solutions for Hotels & Resorts.
-    "
+      content="A cinematic duo comprising of cinematographer Camila Hayes and musician Julia Groppo. We provide Content solutions for Hotels & Resorts."
     />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="CAJÚ" />
+    <meta property="og:image" content="https://www.cajucreatives.com/comissioned/9.avif" />
+    <meta property="og:image" content="https://www.cajucreatives.com/comissioned/9.jpg" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
+    <meta property="og:url" content="https://www.cajucreatives.com/" />
+    <meta property="og:type" content="website" />
+
+    <meta property="og:locale" content="en" />
+    <meta property="og:description" content="Content solutions for Hotels & Resorts" />
+
+    <meta property="og:locale" content="es" />
+    <meta property="og:description" content="Soluciones de contenido para Hoteles y Resorts" />
+
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png" />
     <script src="/components/aside-menu.js" type="module"></script>
