--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="es-ar">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,6 +27,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png" />
     <script src="/components/aside-menu.js" type="module"></script>
+
     <style>
       /* Reset */
       * {
@@ -130,7 +131,7 @@
   <body>
     <aside-menu> </aside-menu>
     <main>
-      <section>
+      <section id="hero">
         <div>
           <picture>
             <source
@@ -144,7 +145,7 @@
               alt="CAJU title"
             />
           </picture>
-          <h4>
+          <h4 data-l10n-key="description">
             We are cinematic duo comprising of cinematographer Camila Hayes and musician Julia Groppo<br />
             We provide Content solutions for Hotels & Resorts
           </h4>
@@ -237,17 +238,17 @@
       </section>
 
       <section id="services">
-        <h3>SERVICES</h3>
-        <p>
+        <h3 data-l10n-key="services">SERVICES</h3>
+        <p data-l10n-key="services-p0">
           We offer a comprehensive and integrated solution of audiovisual material for media and social networks. We
           have the resources, skills, and industry-specific experience to develop creative projects that are functional
           for the client.
         </p>
-        <p>
+        <p data-l10n-key="services-p1">
           Whether for the web or advertising campaigns, we create audiovisual pieces and photographs that boost their
           online presence and attract new consumers.
         </p>
-        <p>
+        <p data-l10n-key="services-p2">
           Furthermore, we specialize in creating content optimized for social media. From short videos in vertical
           format for stories, reels, and TikTok, to photos and videos in horizontal format for Instagram feed posts, we
           ensure that your content adapts perfectly to each platform, highlighting the uniqueness of each place and
@@ -302,8 +303,8 @@
       </section>
 
       <section id="about">
-        <h3>ABOUT</h3>
-        <p>
+        <h3 data-l10n-key="about">ABOUT</h3>
+        <p data-l10n-key="about-p0">
           In Cajú, two best friends, one filmmaker and the other musician, come together to reveal the essence of each
           space. With versatility, and a creatively vision, cultivated together throughout our lives, we approach every
           challenge with passion.<br />
@@ -318,7 +319,7 @@
           <source srcset="/assets/images/about.avif" type="image/avif" />
           <img src="/assets/images/about.png" height="284" loading="lazy" alt="Camila Hayes and Julia Groppo" />
         </picture>
-        <p>
+        <p data-l10n-key="about-p1">
           At the age of 13, <strong>Camila Hayes</strong> inherited her mother's photo camera, marking the beginning of
           her profound love for photography and a constant pursuit of expressing herself through visual language, which
           led to her fascination with cinema. Years later, she graduated from the National University of Córdoba with a
@@ -330,7 +331,7 @@
           Just as different weather atmospheres shape our moods, she seeks to create cinematic atmospheres that
           emotionally resonate with the viewer, as she considers art to be primarily an affective experience.
         </p>
-        <p>
+        <p data-l10n-key="about-p2">
           <strong>Julia Groppo</strong> grew up immersed in the world of music from an early age. Singer, guitarist, and
           drummer, she has explored a wide range of genres that have shaped her unique personal style. Her great passion
           for storytelling and boundless sonic expression, found in film music the perfect canvas to experiment with
@@ -416,7 +417,7 @@
         </style>
       </section>
       <section id="contact">
-        <h3>CONTACT</h3>
+        <h3 data-l10n-key="contact">CONTACT</h3>
         <div class="contact-info">
           <a href="mailto:caju.creatives@gmail.com">caju.creatives@gmail.com </a>
           <a href="tel:+34687017471">+34687017471</a>
@@ -436,7 +437,7 @@
         </div>
 
         <div>
-          <p class="inspiration">From the essence the idea germinates, <br />from the idea the story flourishes.</p>
+          <p class="inspiration" data-l10n-key="inspiration">From the essence the idea germinates, <br />from the idea the story flourishes.</p>
           <button onclick='window.scrollTo({top: 0, behavior: "smooth"})' aria-label="Go back to top">
             <picture>
               <source srcset="/assets/images/logo-xs.avif 1x, /assets/images/logo-xs-2x.avif 2x" type="image/avif" />
@@ -498,5 +499,23 @@
         </style>
       </section>
     </main>
+
+    <!-- L10N -->
+    <script type="module">
+      import { useL10n } from "/lib/i18n/use-l10n.js";
+      const [getUILanguage, getPreferredLanguage, setLanguage] = useL10n({
+        filesPath: "./l10n/", // => fetch('./l10n/{language}.json')
+        dataAttrName: "data-l10n-key", // i.e. <p data-l10n-key="...">
+      });
+
+      window.addEventListener("load", () => {
+        for (const button of document.querySelectorAll("[data-l10n-lang]")) {
+          button.addEventListener("click", () => {
+            setLanguage(button.dataset.l10nLang);
+            button.classList.add("active");
+          });
+        }
+      });
+    </script>
   </body>
 </html>
