--- a/comissioned/index.html
+++ b/comissioned/index.html
@@ -114,91 +114,91 @@
     <aside-menu> </aside-menu>
     <main>
       <section>
-        <h1 data-l10n-key="comissioned">COMISSIONED</h1>
+        <h3 data-l10n-key="comissioned">COMISSIONED</h3>
 
         <div class="videos">
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="1.avif" type="image/avif" />
-              <img src="1.jpg" width="1280" loading="lazy" />
+              <img src="1.jpg" width="1280" height="720" alt="Aire" />
             </picture>
           </button>
           <button data-video-id="QOvJbafxpYY">
             <picture>
               <source srcset="2.avif" type="image/avif" />
-              <img src="2.jpg" width="1280" loading="lazy" />
+              <img src="2.jpg" width="1280" height="720" alt="Nutre " />
             </picture>
           </button>
           <button data-video-id="50yAWEOPBNQ">
             <picture>
               <source srcset="3.avif" type="image/avif" />
-              <img src="3.jpg" width="1280" loading="lazy" alt="Serenidad" />
+              <img src="3.jpg" width="1280" height="720" alt="Serenidad" />
             </picture>
           </button>
           <button data-video-id="OlqNYTXEm2U">
             <picture>
               <source srcset="4.avif" type="image/avif" />
-              <img src="4.jpg" width="1280" loading="lazy" />
+              <img src="4.jpg" width="1280" height="720" alt="Agua y fuego" />
             </picture>
           </button>
           <button data-video-id="73uYOkjWGwE">
             <picture>
               <source srcset="5.avif" type="image/avif" />
-              <img src="5.jpg" width="1280" loading="lazy" />
+              <img src="5.jpg" width="1280" loading="lazy" height="720" alt="La porteñita I" />
             </picture>
           </button>
           <button data-video-id="doAxG609gl8">
             <picture>
               <source srcset="6.avif" type="image/avif" />
-              <img src="6.jpg" width="1280" loading="lazy" />
+              <img src="6.jpg" width="1280" loading="lazy" height="720" alt="La porteñita II" />
             </picture>
           </button>
           <button data-video-id="tXTVjh5IlsQ">
             <picture>
               <source srcset="7.avif" type="image/avif" />
-              <img src="7.jpg" width="1280" loading="lazy" />
+              <img src="7.jpg" width="1280" loading="lazy" height="720" alt="Rio Seco I" />
             </picture>
           </button>
           <button data-video-id="J659RcZ2H3Q">
             <picture>
               <source srcset="8.avif" type="image/avif" />
-              <img src="8.jpg" width="1280" loading="lazy" />
+              <img src="8.jpg" width="1280" loading="lazy" height="720" alt="Rio Seco II" />
             </picture>
           </button>
           <button data-video-id="4b7Mn5OwTjY">
             <picture>
               <source srcset="9.avif" type="image/avif" />
-              <img src="9.jpg" width="1280" loading="lazy" />
+              <img src="9.jpg" width="1280" loading="lazy" height="720" alt="Sierra verde II" />
             </picture>
           </button>
           <button data-video-id="CUGxE1dCdVo">
             <picture>
               <source srcset="10.avif" type="image/avif" />
-              <img src="10.jpg" width="1280" loading="lazy" />
+              <img src="10.jpg" width="1280" loading="lazy" height="720" alt="Sierra verde I" />
             </picture>
           </button>
           <button data-video-id="zoq9qPdPlhI">
             <picture>
               <source srcset="11.avif" type="image/avif" />
-              <img src="11.jpg" width="1280" loading="lazy" />
+              <img src="11.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro II" />
             </picture>
           </button>
           <button data-video-id="0oNediAsYlE">
             <picture>
               <source srcset="12.avif" type="image/avif" />
-              <img src="12.jpg" width="1280" loading="lazy" />
+              <img src="12.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro IIII" />
             </picture>
           </button>
           <button data-video-id="Nmr5Qld7Jf4">
             <picture>
               <source srcset="13.avif" type="image/avif" />
-              <img src="13.jpg" width="1280" loading="lazy" />
+              <img src="13.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro I" />
             </picture>
           </button>
           <button data-video-id="JxnBci9dZhQ">
             <picture>
               <source srcset="14.avif" type="image/avif" />
-              <img src="14.jpg" width="1280" loading="lazy" />
+              <img src="14.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro III" />
             </picture>
           </button>
         </div>
@@ -238,6 +238,7 @@
               border: none;
               outline: none;
               cursor: pointer;
+              background-color: transparent;
 
               img {
                 width: 100%;
