--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           url("/assets/images/bg-texture.avif") type("image/avif"),
           url("/assets/images/bg-texture.png") type("image/png")
         );
+        background-size: 150px; /* Make noise smaller */
         background-repeat: repeat;
         font-family: Candara, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
           Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
