Make names nowrap in hero description

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
             />
           </picture>
           <h4 data-l10n-key="description">
-            We are cinematic duo comprising of cinematographer Camila Hayes and musician Julia Groppo<br />
+            We are cinematic duo comprising of cinematographer <span style="text-wrap: nowrap">Camila Hayes</span> and musician
+            <span style="text-wrap: nowrap">Julia Groppo</span><br />
             We provide Content solutions for Hotels & Resorts
           </h4>
           <button
