Change logo image and add it as header go-top-home

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <source srcset="/assets/images/logo-xs.avif 1x, /assets/images/logo-xs-2x.avif 2x" type="image/avif" />
               <img
                 srcset="/assets/images/logo-xs.png 1x, /assets/images/logo-xs-2x.png 2x"
-                height="100"
+                width="60"
                 alt="logo as button"
               />
             </picture>
@@ -219,6 +219,8 @@
                 cursor: pointer;
                 opacity: 0.48;
                 animation: music 1.3s alternate 0s infinite;
+
+                margin-top: 1.5rem;
 
                 &.music-on {
                   opacity: 1 !important;
