Add scroll smooth

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         min-height: 100%;
         font-size: 100%;
         line-height: 1.25;
+        scroll-behavior: smooth;
       }
 
       /* Global styles */
