--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
         ></video>
         <script>
           function getScreenOrientation() {
+            if (!screen.orientation) return screen.height >= screen.width ? "portrait" : "landscape";
+
             return screen.orientation.type.startsWith("portrait") ? "portrait" : "landscape";
           }
 
