--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
           <a href="mailto:caju.creatives@gmail.com">caju.creatives@gmail.com </a>
           <a href="tel:+34687017471">+34687017471</a>
           <a href="tel:+34657759110">+34657759110</a>
-          <a href="https://www.instagram.com/cajucreatives/">
+          <a href="https://www.instagram.com/cajucreatives/" aria-label="Open Instagram">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="30"
