Replace about section image
* Use animated gif instead

--- a/index.html
+++ b/index.html
@@ -327,13 +327,7 @@
           experience.
         </p>
         <picture>
-          <source srcset="/assets/images/about-300w.avif 1x, /assets/images/about-640w.avif 2x" type="image/avif" />
-          <img
-            srcset="/assets/images/about-300w.avif 1x, /assets/images/about-640w.avif 2x"
-            width="170"
-            loading="lazy"
-            alt="Camila Hayes and Julia Groppo"
-          />
+          <img src="/assets/images/about.gif" loading="lazy" />
         </picture>
         <p data-l10n-key="about-p1">
           At the age of 13, <strong>Camila Hayes</strong> inherited her mother's photo camera, marking the beginning of
