--- a/index.html
+++ b/index.html
@@ -268,6 +268,195 @@
         </style>
       </section>
 
+      <section id="comissioned">
+        <h3 data-l10n-key="comissioned">COMISSIONED</h3>
+
+        <div class="videos">
+          <button data-video-id="3wNDdOhAHrM">
+            <picture>
+              <source srcset="/comissioned/1.avif" type="image/avif" />
+              <img src="/comissioned/1.jpg" width="1280" height="720" alt="Aire" />
+            </picture>
+          </button>
+          <button data-video-id="QOvJbafxpYY">
+            <picture>
+              <source srcset="/comissioned/2.avif" type="image/avif" />
+              <img src="/comissioned/2.jpg" width="1280" height="720" alt="Nutre " />
+            </picture>
+          </button>
+          <button data-video-id="50yAWEOPBNQ">
+            <picture>
+              <source srcset="/comissioned/3.avif" type="image/avif" />
+              <img src="/comissioned/3.jpg" width="1280" height="720" alt="Serenidad" />
+            </picture>
+          </button>
+          <button data-video-id="OlqNYTXEm2U">
+            <picture>
+              <source srcset="/comissioned/4.avif" type="image/avif" />
+              <img src="/comissioned/4.jpg" width="1280" height="720" alt="Agua y fuego" />
+            </picture>
+          </button>
+          <button data-video-id="73uYOkjWGwE">
+            <picture>
+              <source srcset="/comissioned/5.avif" type="image/avif" />
+              <img src="/comissioned/5.jpg" width="1280" loading="lazy" height="720" alt="La porteñita I" />
+            </picture>
+          </button>
+          <button data-video-id="doAxG609gl8">
+            <picture>
+              <source srcset="/comissioned/6.avif" type="image/avif" />
+              <img src="/comissioned/6.jpg" width="1280" loading="lazy" height="720" alt="La porteñita II" />
+            </picture>
+          </button>
+          <button data-video-id="tXTVjh5IlsQ">
+            <picture>
+              <source srcset="/comissioned/7.avif" type="image/avif" />
+              <img src="/comissioned/7.jpg" width="1280" loading="lazy" height="720" alt="Rio Seco I" />
+            </picture>
+          </button>
+          <button data-video-id="J659RcZ2H3Q">
+            <picture>
+              <source srcset="/comissioned/8.avif" type="image/avif" />
+              <img src="/comissioned/8.jpg" width="1280" loading="lazy" height="720" alt="Rio Seco II" />
+            </picture>
+          </button>
+          <button data-video-id="4b7Mn5OwTjY">
+            <picture>
+              <source srcset="/comissioned/9.avif" type="image/avif" />
+              <img src="/comissioned/9.jpg" width="1280" loading="lazy" height="720" alt="Sierra verde II" />
+            </picture>
+          </button>
+          <button data-video-id="CUGxE1dCdVo">
+            <picture>
+              <source srcset="/comissioned/10.avif" type="image/avif" />
+              <img src="/comissioned/10.jpg" width="1280" loading="lazy" height="720" alt="Sierra verde I" />
+            </picture>
+          </button>
+          <button data-video-id="zoq9qPdPlhI">
+            <picture>
+              <source srcset="/comissioned/11.avif" type="image/avif" />
+              <img src="/comissioned/11.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro II" />
+            </picture>
+          </button>
+          <button data-video-id="0oNediAsYlE">
+            <picture>
+              <source srcset="/comissioned/12.avif" type="image/avif" />
+              <img src="/comissioned/12.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro IIII" />
+            </picture>
+          </button>
+          <button data-video-id="Nmr5Qld7Jf4">
+            <picture>
+              <source srcset="/comissioned/13.avif" type="image/avif" />
+              <img src="/comissioned/13.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro I" />
+            </picture>
+          </button>
+          <button data-video-id="JxnBci9dZhQ">
+            <picture>
+              <source srcset="/comissioned/14.avif" type="image/avif" />
+              <img src="/comissioned/14.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro III" />
+            </picture>
+          </button>
+        </div>
+
+        <dialog id="videoDialog">
+          <div id="player"></div>
+        </dialog>
+
+        <style>
+          #comissioned {
+            dialog {
+              padding: 0;
+              border: none;
+              background: transparent;
+            }
+            dialog[open]::backdrop {
+              background-color: rgba(0, 0, 0, 0.8);
+            }
+
+            iframe {
+              width: 85vw;
+              aspect-ratio: 1920/1080;
+              max-width: 85vw;
+              max-height: 85vh;
+            }
+
+            .videos {
+              display: grid;
+              grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
+              margin-block-start: 5rem;
+              row-gap: 2rem;
+              column-gap: 5rem;
+
+              button {
+                padding: 0;
+                margin: 0;
+                border: none;
+                outline: none;
+                cursor: pointer;
+                background-color: transparent;
+
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                }
+              }
+            }
+          }
+        </style>
+        <!-- Video handling scripts -->
+
+        <script src="https://www.youtube.com/iframe_api" defer></script>
+        <script defer>
+          // 3. This function creates an <iframe> (and YouTube player)
+          //    after the API code downloads.
+          let player;
+          function onYouTubeIframeAPIReady() {
+            player = new YT.Player("player", {
+              width: "1920",
+              videoId: "",
+              playerVars: {
+                playsinline: 1,
+              },
+              events: {
+                onReady: (e) => e.target.playVideo(),
+              },
+            });
+          }
+
+          function playVideo(videoId) {
+            if (videoId && videoId !== player.getVideoData().video_id) {
+              return player.loadVideoById(videoId);
+            }
+
+            // Otherwise resume play of currrent video.
+            player.playVideo();
+          }
+
+          const videoDialog = document.getElementById("videoDialog");
+          // const iframe = document.getElementById("youtubePlayer");
+
+          videoDialog.addEventListener("click", () => {
+            // Check if we should close the dialog (when clicking outside dialog content)
+            if (videoDialog.open) {
+              videoDialog.close();
+              player.pauseVideo();
+            }
+          });
+
+          for (const button of document.querySelectorAll("#comissioned button:has(img)")) {
+            button.addEventListener("click", openVideo);
+          }
+
+          function openVideo(event) {
+            videoDialog.showModal();
+            playVideo(event.currentTarget.dataset.videoId);
+            bgAudio.pause();
+          }
+        </script>
+      </section>
+
       <section id="services">
         <h3 data-l10n-key="services">SERVICES</h3>
         <p data-l10n-key="services-p0">
