Adjust comissioned and remove /comissioned/ page

--- a/index.html
+++ b/index.html
@@ -268,92 +268,157 @@
         </style>
       </section>
 
+      <section id="services">
+        <h3 data-l10n-key="services">SERVICES</h3>
+        <p data-l10n-key="services-p0">
+          We offer a comprehensive and integrated solution of audiovisual material for media and social networks. We
+          have the resources, skills, and industry-specific experience to develop creative projects that are functional
+          for the client.
+        </p>
+        <p data-l10n-key="services-p1">
+          Whether for the web or advertising campaigns, we create audiovisual pieces and photographs that boost their
+          online presence and attract new consumers.
+        </p>
+        <p data-l10n-key="services-p2">
+          Furthermore, we specialize in creating content optimized for social media. From short videos in vertical
+          format for stories, reels, and TikTok, to photos and videos in horizontal format for Instagram feed posts, we
+          ensure that your content adapts perfectly to each platform, highlighting the uniqueness of each place and
+          engaging with current trends.
+        </p>
+
+        <picture>
+          <source
+            srcset="/assets/images/background-cajus-landscape.avif"
+            type="image/avif"
+            media="(orientation: landscape)"
+            width="1920"
+            heigth="1357"
+          />
+          <source
+            srcset="/assets/images/background-cajus-landscape.png"
+            type="image/png"
+            media="(orientation: landscape)"
+            width="1920"
+            heigth="1357"
+          />
+          <source
+            srcset="/assets/images/background-cajus-portrait.avif"
+            type="image/avif"
+            media="(orientation: portrait)"
+            width="1357"
+            heigth="1920"
+          />
+          <img
+            class="background-full"
+            src="/assets/images/background-cajus-portrait.png"
+            type="image/png"
+            width="1357"
+            heigth="1920"
+            media="(orientation: portrait)"
+            loading="lazy"
+            alt=""
+          />
+        </picture>
+
+        <style>
+          #services {
+            display: grid;
+            place-content: center;
+
+            .background-full {
+              object-position: top;
+              opacity: 0.18;
+            }
+          }
+        </style>
+      </section>
+
       <section id="comissioned">
         <h3 data-l10n-key="comissioned">COMISSIONED</h3>
 
         <div class="videos">
           <button data-video-id="3wNDdOhAHrM">
             <picture>
-              <source srcset="/comissioned/1.avif" type="image/avif" />
-              <img src="/comissioned/1.jpg" width="1280" height="720" alt="Aire" />
+              <source srcset="/assets/images/comissioned/1.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/1.jpg" width="1280" height="720" alt="Aire" />
             </picture>
           </button>
           <button data-video-id="QOvJbafxpYY">
             <picture>
-              <source srcset="/comissioned/2.avif" type="image/avif" />
-              <img src="/comissioned/2.jpg" width="1280" height="720" alt="Nutre " />
+              <source srcset="/assets/images/comissioned/2.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/2.jpg" width="1280" height="720" alt="Nutre " />
             </picture>
           </button>
           <button data-video-id="50yAWEOPBNQ">
             <picture>
-              <source srcset="/comissioned/3.avif" type="image/avif" />
-              <img src="/comissioned/3.jpg" width="1280" height="720" alt="Serenidad" />
+              <source srcset="/assets/images/comissioned/3.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/3.jpg" width="1280" height="720" alt="Serenidad" />
             </picture>
           </button>
           <button data-video-id="OlqNYTXEm2U">
             <picture>
-              <source srcset="/comissioned/4.avif" type="image/avif" />
-              <img src="/comissioned/4.jpg" width="1280" height="720" alt="Agua y fuego" />
+              <source srcset="/assets/images/comissioned/4.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/4.jpg" width="1280" height="720" alt="Agua y fuego" />
             </picture>
           </button>
           <button data-video-id="73uYOkjWGwE">
             <picture>
-              <source srcset="/comissioned/5.avif" type="image/avif" />
-              <img src="/comissioned/5.jpg" width="1280" loading="lazy" height="720" alt="La porteñita I" />
+              <source srcset="/assets/images/comissioned/5.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/5.jpg" width="1280" loading="lazy" height="720" alt="La porteñita I" />
             </picture>
           </button>
           <button data-video-id="doAxG609gl8">
             <picture>
-              <source srcset="/comissioned/6.avif" type="image/avif" />
-              <img src="/comissioned/6.jpg" width="1280" loading="lazy" height="720" alt="La porteñita II" />
+              <source srcset="/assets/images/comissioned/6.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/6.jpg" width="1280" loading="lazy" height="720" alt="La porteñita II" />
             </picture>
           </button>
           <button data-video-id="tXTVjh5IlsQ">
             <picture>
-              <source srcset="/comissioned/7.avif" type="image/avif" />
-              <img src="/comissioned/7.jpg" width="1280" loading="lazy" height="720" alt="Rio Seco I" />
+              <source srcset="/assets/images/comissioned/7.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/7.jpg" width="1280" loading="lazy" height="720" alt="Rio Seco I" />
             </picture>
           </button>
           <button data-video-id="J659RcZ2H3Q">
             <picture>
-              <source srcset="/comissioned/8.avif" type="image/avif" />
-              <img src="/comissioned/8.jpg" width="1280" loading="lazy" height="720" alt="Rio Seco II" />
+              <source srcset="/assets/images/comissioned/8.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/8.jpg" width="1280" loading="lazy" height="720" alt="Rio Seco II" />
             </picture>
           </button>
           <button data-video-id="4b7Mn5OwTjY">
             <picture>
-              <source srcset="/comissioned/9.avif" type="image/avif" />
-              <img src="/comissioned/9.jpg" width="1280" loading="lazy" height="720" alt="Sierra verde II" />
+              <source srcset="/assets/images/comissioned/9.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/9.jpg" width="1280" loading="lazy" height="720" alt="Sierra verde II" />
             </picture>
           </button>
           <button data-video-id="CUGxE1dCdVo">
             <picture>
-              <source srcset="/comissioned/10.avif" type="image/avif" />
-              <img src="/comissioned/10.jpg" width="1280" loading="lazy" height="720" alt="Sierra verde I" />
+              <source srcset="/assets/images/comissioned/10.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/10.jpg" width="1280" loading="lazy" height="720" alt="Sierra verde I" />
             </picture>
           </button>
           <button data-video-id="zoq9qPdPlhI">
             <picture>
-              <source srcset="/comissioned/11.avif" type="image/avif" />
-              <img src="/comissioned/11.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro II" />
+              <source srcset="/assets/images/comissioned/11.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/11.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro II" />
             </picture>
           </button>
           <button data-video-id="0oNediAsYlE">
             <picture>
-              <source srcset="/comissioned/12.avif" type="image/avif" />
-              <img src="/comissioned/12.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro IIII" />
+              <source srcset="/assets/images/comissioned/12.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/12.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro IIII" />
             </picture>
           </button>
           <button data-video-id="Nmr5Qld7Jf4">
             <picture>
-              <source srcset="/comissioned/13.avif" type="image/avif" />
-              <img src="/comissioned/13.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro I" />
+              <source srcset="/assets/images/comissioned/13.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/13.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro I" />
             </picture>
           </button>
           <button data-video-id="JxnBci9dZhQ">
             <picture>
-              <source srcset="/comissioned/14.avif" type="image/avif" />
-              <img src="/comissioned/14.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro III" />
+              <source srcset="/assets/images/comissioned/14.avif" type="image/avif" />
+              <img src="/assets/images/comissioned/14.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro III" />
             </picture>
           </button>
         </div>
@@ -455,71 +520,6 @@
             bgAudio.pause();
           }
         </script>
-      </section>
-
-      <section id="services">
-        <h3 data-l10n-key="services">SERVICES</h3>
-        <p data-l10n-key="services-p0">
-          We offer a comprehensive and integrated solution of audiovisual material for media and social networks. We
-          have the resources, skills, and industry-specific experience to develop creative projects that are functional
-          for the client.
-        </p>
-        <p data-l10n-key="services-p1">
-          Whether for the web or advertising campaigns, we create audiovisual pieces and photographs that boost their
-          online presence and attract new consumers.
-        </p>
-        <p data-l10n-key="services-p2">
-          Furthermore, we specialize in creating content optimized for social media. From short videos in vertical
-          format for stories, reels, and TikTok, to photos and videos in horizontal format for Instagram feed posts, we
-          ensure that your content adapts perfectly to each platform, highlighting the uniqueness of each place and
-          engaging with current trends.
-        </p>
-
-        <picture>
-          <source
-            srcset="/assets/images/background-cajus-landscape.avif"
-            type="image/avif"
-            media="(orientation: landscape)"
-            width="1920"
-            heigth="1357"
-          />
-          <source
-            srcset="/assets/images/background-cajus-landscape.png"
-            type="image/png"
-            media="(orientation: landscape)"
-            width="1920"
-            heigth="1357"
-          />
-          <source
-            srcset="/assets/images/background-cajus-portrait.avif"
-            type="image/avif"
-            media="(orientation: portrait)"
-            width="1357"
-            heigth="1920"
-          />
-          <img
-            class="background-full"
-            src="/assets/images/background-cajus-portrait.png"
-            type="image/png"
-            width="1357"
-            heigth="1920"
-            media="(orientation: portrait)"
-            loading="lazy"
-            alt=""
-          />
-        </picture>
-
-        <style>
-          #services {
-            display: grid;
-            place-content: center;
-
-            .background-full {
-              object-position: top;
-              opacity: 0.18;
-            }
-          }
-        </style>
       </section>
 
       <section id="about">
@@ -639,6 +639,7 @@
           }
         </style>
       </section>
+
       <section id="contact">
         <h3 data-l10n-key="contact">CONTACT</h3>
         <div class="contact-info">
