Add Google Tag Manager script

--- a/index.html
+++ b/index.html
@@ -364,13 +364,25 @@
           <button data-video-id="73uYOkjWGwE">
             <picture>
               <source srcset="/assets/images/comissioned/5.avif" type="image/avif" />
-              <img src="/assets/images/comissioned/5.jpg" width="1280" loading="lazy" height="720" alt="La porteñita I" />
+              <img
+                src="/assets/images/comissioned/5.jpg"
+                width="1280"
+                loading="lazy"
+                height="720"
+                alt="La porteñita I"
+              />
             </picture>
           </button>
           <button data-video-id="doAxG609gl8">
             <picture>
               <source srcset="/assets/images/comissioned/6.avif" type="image/avif" />
-              <img src="/assets/images/comissioned/6.jpg" width="1280" loading="lazy" height="720" alt="La porteñita II" />
+              <img
+                src="/assets/images/comissioned/6.jpg"
+                width="1280"
+                loading="lazy"
+                height="720"
+                alt="La porteñita II"
+              />
             </picture>
           </button>
           <button data-video-id="tXTVjh5IlsQ">
@@ -388,37 +400,73 @@
           <button data-video-id="4b7Mn5OwTjY">
             <picture>
               <source srcset="/assets/images/comissioned/9.avif" type="image/avif" />
-              <img src="/assets/images/comissioned/9.jpg" width="1280" loading="lazy" height="720" alt="Sierra verde II" />
+              <img
+                src="/assets/images/comissioned/9.jpg"
+                width="1280"
+                loading="lazy"
+                height="720"
+                alt="Sierra verde II"
+              />
             </picture>
           </button>
           <button data-video-id="CUGxE1dCdVo">
             <picture>
               <source srcset="/assets/images/comissioned/10.avif" type="image/avif" />
-              <img src="/assets/images/comissioned/10.jpg" width="1280" loading="lazy" height="720" alt="Sierra verde I" />
+              <img
+                src="/assets/images/comissioned/10.jpg"
+                width="1280"
+                loading="lazy"
+                height="720"
+                alt="Sierra verde I"
+              />
             </picture>
           </button>
           <button data-video-id="zoq9qPdPlhI">
             <picture>
               <source srcset="/assets/images/comissioned/11.avif" type="image/avif" />
-              <img src="/assets/images/comissioned/11.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro II" />
+              <img
+                src="/assets/images/comissioned/11.jpg"
+                width="1280"
+                loading="lazy"
+                height="720"
+                alt="El Encuentro II"
+              />
             </picture>
           </button>
           <button data-video-id="0oNediAsYlE">
             <picture>
               <source srcset="/assets/images/comissioned/12.avif" type="image/avif" />
-              <img src="/assets/images/comissioned/12.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro IIII" />
+              <img
+                src="/assets/images/comissioned/12.jpg"
+                width="1280"
+                loading="lazy"
+                height="720"
+                alt="El Encuentro IIII"
+              />
             </picture>
           </button>
           <button data-video-id="Nmr5Qld7Jf4">
             <picture>
               <source srcset="/assets/images/comissioned/13.avif" type="image/avif" />
-              <img src="/assets/images/comissioned/13.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro I" />
+              <img
+                src="/assets/images/comissioned/13.jpg"
+                width="1280"
+                loading="lazy"
+                height="720"
+                alt="El Encuentro I"
+              />
             </picture>
           </button>
           <button data-video-id="JxnBci9dZhQ">
             <picture>
               <source srcset="/assets/images/comissioned/14.avif" type="image/avif" />
-              <img src="/assets/images/comissioned/14.jpg" width="1280" loading="lazy" height="720" alt="El Encuentro III" />
+              <img
+                src="/assets/images/comissioned/14.jpg"
+                width="1280"
+                loading="lazy"
+                height="720"
+                alt="El Encuentro III"
+              />
             </picture>
           </button>
         </div>
@@ -603,7 +651,6 @@
                 --offset-correction: calc(10vw * 2);
               }
               img {
-
                 position: absolute;
                 width: 50vw;
                 opacity: 0.4;
@@ -738,5 +785,20 @@
         </style>
       </section>
     </main>
+
+    <!-- START EXTRA SCRIPTS -->
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BKRKXH7KFB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-BKRKXH7KFB");
+    </script>
+    <!-- END EXTRA SCRIPTS -->
   </body>
 </html>
